<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Super & Child GAV properties -->
  <parent>
    <groupId>com.serinity</groupId>
    <artifactId>serinity</artifactId>
    <version>1.0.0</version>
  </parent>
  <artifactId>consultation</artifactId>
  <!-- !Super & Child GAV properties -->

  <!-- Module properties -->
  <name>consultation</name>
  <!-- !Module properties -->

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>
  </properties>

  <dependencies>
    <!-- org.openjfx.javafx-controls -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>17.0.6</version>
    </dependency>
    <!-- !org.openjfx.javafx-controls -->

    <!-- org.openjfx.javafx-fxml -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>17.0.6</version>
    </dependency>
    <!-- !org.openjfx.javafx-fxml -->

    <!-- mysql.mysql-connector-java -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.33</version>
    </dependency>
    <!-- !mysql.mysql-connector-java -->

    <!-- org.junit.jupiter -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <!-- !org.junit.jupiter -->

    <!-- com.google.zxing QR code -->
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>3.5.3</version>
    </dependency>
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>3.5.3</version>
    </dependency>
    <!-- !com.google.zxing -->

    <!-- com.sun.mail email -->
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>jakarta.mail</artifactId>
      <version>2.0.1</version>
    </dependency>
    <!-- !com.sun.mail -->

    <!-- org.json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20231013</version>
    </dependency>
    <!-- !org.json -->

    <!-- com.itextpdf -->
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>kernel</artifactId>
      <version>7.2.5</version>
    </dependency>
    <dependency>
      <groupId>com.itextpdf</groupId>
      <artifactId>layout</artifactId>
      <version>7.2.5</version>
    </dependency>
    <!-- !com.itextpdf -->
  </dependencies>

  <build>
    <plugins>
      <!-- org.apache.maven.plugins.maven-compiler-plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>--add-reads=esprit.tn.oussema_javafx=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <!-- !org.apache.maven.plugins.maven-compiler-plugin -->

      <!-- org.openjfx.javafx-maven-plugin -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <executions>
          <execution>
            <!-- Default configuration for running -->
            <!-- Usage: mvn clean javafx:run -->
            <id>default-cli</id>
            <configuration>
              <mainClass>esprit.tn.oussema_javafx/esprit.tn.oussema_javafx.Main</mainClass>
              <launcher>app</launcher>
              <jlinkZipName>app</jlinkZipName>
              <jlinkImageName>app</jlinkImageName>
              <noManPages>true</noManPages>
              <stripDebug>true</stripDebug>
              <noHeaderFiles>true</noHeaderFiles>
              <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
              <options>
                <option>--add-reads=esprit.tn.oussema_javafx=ALL-UNNAMED</option>
              </options>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <!-- !org.openjfx.javafx-maven-plugin -->
    </plugins>
  </build>
</project>
